# flameshot

./: .clang-tidy  CMakeLists.txt  flameshot.pro  snapcraft.yaml
.github/workflows/: Linux-pack.yml
src/: CMakeLists.txt  main.cpp
src/config/: configwindow.cpp  filenameeditor.cpp  geneneralconf.cpp  generalconf.cpp  generalconf.h  pluginconf.cpp  pluginconf.h
src/plugins/: CMakeLists.txt  imgur_plugin.cpp  my_plugin_sum.cpp
src/tools/: CMakeLists.txt
src/tools/circlecount/: circlecounttool.cpp
src/tools/copy/: copytool.cpp
src/tools/imgur/: imguruploader.cpp  uploadplugin.cpp  uploadplugin.h
src/tools/launcher/: applauncherwidget.cpp
src/tools/pin/: pinwidget.cpp
src/utils/: confighandler.h  filenamehandler.cpp  filenamehandler.h  screengrabber.cpp  screenshotsaver.cpp
src/widgets/capture/: capturewidget.cpp  capturewidget.h
test/: CMakeLists.txt  test.cpp  test_filenamehandler.cpp
